# concept-design-physical-simulation

./: .cursorrules  .gitignore  .gitmodules  README.md  README_MODAL_ANALYSIS.md  README_ORBIT_ENGINE.md  analyze_logs.py  main.py  package.json  pnpm-lock.yaml  prompt.md  pyproject.toml
.cursor/rules/: concept-implementation.mdc  guidelines.mdc
.github/workflows/: deploy.yml
api/: .env.template  .gitignore  main.py  modal_analysis.py  requirements.txt
api/services/: llm.py  marl.py
api/simulations/: engine.py  orbital_mechanics.py
client/: .env.template  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
client/src/: App.jsx  config.js  index.css  main.jsx  store.js
client/src/components/: ButtonForkOnGithub.jsx  CameraFeeds.jsx  Car.jsx  ChartPanel.jsx  ControlPanel.jsx  DebugConsole.jsx  EquationPanel.jsx  InfoPanel.jsx  Lidar.jsx  Map.jsx  Map2D.jsx  MessagePanel.jsx  ModalControls.jsx  ModelInfoPanel.jsx  OpenSCADEditor.jsx  Pedestrian.jsx  PhysicsPanel.jsx  Roads.jsx  SolarSystem.jsx  TensorBoardViewer.jsx  TensorboardPanel.jsx  TrafficLight.jsx  TrajectoryPlanner.jsx  TronBackground.jsx  TuningForkModel.jsx  TuningForkParameters.jsx
client/src/hooks/: useResponsive.js  useWebSocket.js
client/src/views/: ModalAnalysis.jsx  OrbitEngine.jsx  (+2 more)
context/: README.md
docs/: position_logging.md
engine/: frames.ts  sync.ts
orbit_engine_specs/: prompt.md
specs/: Camera.concept  CelestialBody.concept  Mission.concept  ModalAnalysis.concept  Simulation.concept  Trajectory.concept  TuningFork.concept
