[project]
name = "orbit-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "scipy>=1.14.0",
    "matplotlib>=3.8.0",
]
